experimental/report/testdata/suggestions.yaml.fancy.txt
remark: let protocompile pick a syntax for you
  --> foo.proto:1:1
  help: delete this
   | 
 1 | - syntax = "proto3";
   | 

remark: let protocompile pick a syntax for you
  --> foo.proto:1:10
  help: delete this
   | 
 1 | - syntax = "proto3";
 1 | + syntax = ;
   | 

warning: services should have a `Service` suffix
  --> foo.proto:5:9
   | 
 5 | service Foo {
   |         ^^^ 
  help: change the name to `FooService`
   | 
 5 | service FooService {
   |            +++++++  

error: missing (...) around return type
  --> foo.proto:6:31
   | 
 6 |   rpc Get(GetRequest) returns GetResponse
   |                               ^^^^^^^^^^^ 
  help: add `(...)` around the type
   | 
 6 |   rpc Get(GetRequest) returns (GetResponse)
   |                               +           +

error: missing semicolon
  --> foo.proto:7:3
   | 
 7 |   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
   |   ^^^ expected semicolon
  help: insert a semicolon
   | 
 6 |   rpc Get(GetRequest) returns GetResponse;
   |                                          +

error: method options must go in a block
  --> foo.proto:7:45
   | 
 7 |   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
   |                                             ^^^^^^^^^^^ compact options not allowed here
  help: use `option` settings inside of the method body
   | 
 7 | -   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
 7 | +   rpc Put(PutRequest) returns (PutResponse) {
 8 | +     option foo = bar;
 9 | +   }
   | 

encountered 3 errors and 1 warning
